[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-cache-audit"
version = "1.0.0"
description = "Analyze Cloudflare cache behavior for any website"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "cf-cache-audit contributors"},
]
keywords = ["cloudflare", "cache", "audit", "cdn", "performance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "beautifulsoup4>=4.12,<5",
    "pydantic>=2.5,<3",
    "rich>=13.7,<14",
    "lxml>=5.1,<6",
    "certifi>=2024.1",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "aioresponses>=0.7",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.scripts]
cf-cache-audit = "cf_cache_audit.cli:main"

[tool.setuptools.packages.find]
include = ["cf_cache_audit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
